CMAKE_MINIMUM_REQUIRED( VERSION 3.0 )

PROJECT( RapaLinuxJoystickSimpleTest )

INCLUDE_DIRECTORIES( ${RapaLinuxJoystick_SOURCE_DIR} )
SET( SOURCES Main.cpp )
ADD_EXECUTABLE( ${PROJECT_NAME} ${SOURCES} )
TARGET_LINK_LIBRARIES( ${PROJECT_NAME} RapaLinuxJoystick )

INSTALL( TARGETS  ${PROJECT_NAME}
		 RUNTIME DESTINATION "bin"
		 LIBRARY DESTINATION "lib"
		 ARCHIVE DESTINATION "lib" )
	